# anomalib

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .semgrepignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.jetson  MAINTAINERS.md  README-Jetson.md  README.md  docker-compose.jetson.yml  pyproject.toml  tox.ini
app/backend/: .gitignore  pyproject.toml  run.sh
app/backend/src/: cli.py  create_openapi.py  exceptions.py  main.py
app/backend/src/api/: dependencies.py  media_rest_validator.py
app/backend/src/api/endpoints/: job_endpoints.py  media_endpoints.py  model_endpoints.py  pipeline_endpoints.py  project_endpoints.py  source_endpoints.py
app/backend/src/core/: __init__.py  lifecycle.py  scheduler.py
app/backend/src/db/: __init__.py  engine.py  schema.py
app/backend/src/entities/: ip_camera_stream.py
app/backend/src/models/: __init__.py  base.py  job.py  media.py  model.py  project.py
app/backend/src/pydantic_models/: base.py  job.py  media.py  metrics.py  model.py  pipeline.py  source.py
app/backend/src/repositories/: __init__.py  base.py  binary_repo.py  job_repo.py  media_repo.py  model_repo.py  pipeline_repo.py  project_repo.py  source_repo.py
app/backend/src/repositories/mappers/: __init__.py  job_mapper.py  media_mapper.py  model_mapper.py  project_mapper.py  sink_mapper.py  source_mapper.py
app/backend/src/rest_api/: dependencies.py
app/backend/src/rest_api/endpoints/: __init__.py  job_endpoints.py  media_endpoints.py  model_endpoints.py  project_endpoints.py
app/backend/src/services/: __init__.py  job_service.py  media_service.py  metrics_service.py  model_service.py  pipeline_service.py  project_service.py  training_service.py
app/backend/src/services/dispatchers/: filesystem.py  webhook.py
app/backend/src/utils/: __init__.py  asyncio_helpers.py  diagnostics.py  queue.py  signal.py  singleton.py  visualization.py
app/backend/src/webrtc/: stream.py
app/backend/src/workers/: __init__.py  dispatching.py  inference.py  training.py
app/backend/tests/unit/: conftest.py
app/backend/tests/unit/endpoints/: test_jobs.py  test_media.py  test_models.py  test_projects.py  test_sources_sinks.py  test_webrtc.py
app/backend/tests/unit/services/: test_configuration_service.py  test_job_service.py  test_media_service.py  test_model_service.py  test_pipeline_service.py  test_project_service.py  test_training_service.py
application/backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  pyproject.toml  run.sh
application/backend/src/: alembic.ini  cli.py  create_openapi.py  exception_handlers.py  exceptions.py  main.py  settings.py
application/backend/src/alembic/: README  env.py
application/backend/src/alembic/versions/: 7a213a27d666_initial_schema.py
application/backend/src/api/: dependencies.py  media_rest_validator.py
application/backend/src/api/dependencies/: __init__.py  dependencies.py  pagination_limit.py
application/backend/src/api/endpoints/: active_pipeline_endpoints.py  capture_endpoints.py  devices_endpoints.py  job_endpoints.py  media_endpoints.py  model_endpoints.py  pipeline_endpoints.py  project_endpoints.py  sink_endpoints.py  snapshot_endpoints.py  source_endpoints.py  stream_endpoints.py  system_endpoints.py  trainable_models_endpoints.py  video_endpoints.py  webrtc.py  webui_endpoints.py
application/backend/src/core/: lifecycle.py  logging.py  mjpeg_broadcaster.py  model_metadata.yaml  scheduler.py
application/backend/src/core/logging/: __init__.py  handlers.py  log_config.py  setup.py  utils.py
application/backend/src/db/: __init__.py  engine.py  migration.py  schema.py
application/backend/src/entities/: base_opencv_stream.py  images_folder_stream.py  ip_camera_stream.py  stream_data.py  usb_camera_stream.py  video_file_stream.py  video_stream.py  webcam_stream.py
application/backend/src/pydantic_models/: __init__.py  base.py  dataset_snapshot.py  devices.py  job.py  media.py  metrics.py  model.py  pipeline.py  project.py  sink.py  source.py  system.py  trainable_model.py  video.py  webrtc.py
application/backend/src/repositories/: __init__.py  base.py  binary_repo.py  dataset_snapshot_repo.py  job_repo.py  pipeline_repo.py  project_repo.py  sink_repo.py  source_repo.py
application/backend/src/repositories/mappers/: __init__.py  base_mapper_interface.py  job_mapper.py  (+7 more)
application/backend/src/services/: __init__.py  active_pipeline_service.py  configuration_service.py  dataset_snapshot_service.py  dispatch_service.py  exceptions.py  job_service.py  media_service.py  metrics_service.py  model_service.py  pipeline_metrics_service.py  pipeline_service.py  project_service.py  system_service.py  training_service.py  video_service.py  video_stream_service.py
application/backend/src/utils/: __init__.py  callbacks.py  devices.py  jpeg_encoder.py  queue.py  visualization.py
application/backend/src/webrtc/: manager.py  sdp_handler.py  stream.py
application/backend/src/workers/: __init__.py  base.py  dispatching.py  inference.py  stream_loading.py  training.py
application/backend/tests/unit/: conftest.py
application/binary/tauri/src-tauri/: Cargo.toml  tauri.conf.json
(+666 files in other folders)
