[project]
name = "geti-inspect"
version = "1.0.0"
description = "Geti inspect server"
requires-python = ">=3.13"

dependencies = [
    "fastapi[standard]~=0.116",
    "jsonschema>=4.18.0a10",
    "uvicorn~=0.17",
    "sqlalchemy[asyncio]~=2.0",
    "aiosqlite~=0.21",
    "psutil~=7.0.0",
    "alembic~=1.16.4",
    "aiofiles==24.1.0",
    "openvino==2025.2.0",
    "pydantic-settings~=2.10.1",
    "aiortc~=1.13.0",
    "anomalib[full]",
    "torchmetrics>=1.8.2",
    "opencv-python-headless~=4.12",
    "watchdog==6.0.0",
    "uvloop==0.21.0",
    "loguru==0.7.3",
    "trackio~=0.6.0",
    "sse-starlette~=3.0",
    "cv2-enumerate-cameras==1.3.1",
    "pyarrow~=21.0.0",
]

[dependency-groups]
dev = [
    "pytest~=8.3",
    "prek",
    "pdbpp~=0.10",
    "flaky~=3.8",
    "testfixtures~=8.2",
    "httpx~=0.24",
    "freezegun~=1.5",
    "pytest-asyncio~=1.3.0",
]
lint = [
    "ruff~=0.11.2",
    "mypy~=1.17",
    "types-requests~=2.32.4",
    "types-PyYAML~=6.0.12",
]

[project.optional-dependencies]
mqtt = [
    "paho-mqtt~=2.1.0",
]

[tool.uv.sources]
anomalib = { path = "../../", editable = true }

[tool.ruff]
extend = "../../pyproject.toml"
target-version = "py313"
line-length = 120

exclude = [".venv*"]

src = ["src"]

lint.select = ["ARG", "E", "F", "I", "N", "UP", "YTT", "ASYNC", "S", "COM", "C4", "FA", "PIE", "PYI", "Q", "RSE", "RET", "SIM",
    "TID", "TC", "PL", "RUF", "C90", "D103", "ANN001", "ANN201", "ANN205", "FAST"]
lint.ignore = ["N801", "N805","N806","N807", "N818", "COM812", "RET503", "SIM108", "SIM105", "PLR2004",
    "RUF010", "TC001",  "RUF012", "PLR6301", "RUF029"]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
    "ignore:.*fork.*may lead to deadlocks.*:DeprecationWarning:multiprocessing",
    "ignore:Please use.*python_multipart.*:PendingDeprecationWarning:starlette",
    "ignore:Importing from timm.models.layers is deprecated.*:FutureWarning:timm",
    # Suppress AsyncMock coroutine warnings - these are test artifacts from unittest.mock
    # framework internals during garbage collection, not actual code issues
    "ignore:coroutine.*was never awaited:RuntimeWarning:unittest.mock",
    # Suppress websockets deprecation warnings from uvicorn (third-party dependency issue)
    "ignore:.*websockets.legacy is deprecated.*:DeprecationWarning",
    "ignore:.*WebSocketServerProtocol is deprecated.*:DeprecationWarning",
    # Suppress third-party library deprecation warnings
    "ignore:Jupyter is migrating its paths.*:DeprecationWarning:jupyter_client",
    "ignore:.*sentry_sdk.Hub.*is deprecated.*:DeprecationWarning",
]

[tool.ruff.lint.per-file-ignores]
"*test*.py" = ["S", "ANN", "D", "ARG", "PLR"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pylint]
max-args=7

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
show_error_codes = true
